--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
     "bundle:spec": "swagger-cli bundle docs/api.yaml -o docs/api-bundled.yaml --type yaml",
     "gen:resources": "npm run bundle:spec && rm -rf resources/* && openapi-generator-cli generate -i docs/api-bundled.yaml -g javascript -o resources --skip-validate-spec --additional-properties=usePromises=true",
     "gen:all": "npm run gen:resources"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
+    "knex": "^3.1.0",
+    "path": "^0.12.7"
   }
 }
