--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.20.0"
   },
@@ -11,6 +12,8 @@
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "knex": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "process": "^0.11.10",
+    "winston": "^3.17.0"
   }
 }
