--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 server:
-  port: ":8003"
+  host: "127.0.0.1"
+  port: "8123"
   logging:
     level: "debug"
     format: "text"
@@ -10,7 +11,11 @@ jwt:
 
 database:
   sql:
-    url: "postgresql://postgres:postgres@localhost:7001/postgres?sslmode=disable"
+    host: "localhost"
+    port: 4488
+    user: "root"
+    password: "password"
+    name: "race01"
 
 oauth:
   google:
