--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "knex": "^3.1.0",
+    "mysql2": "^3.14.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "winston": "^3.17.0"
