--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gen:all": "npm run gen:resources"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "knex": "^3.1.0",
