--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "gen:all": "npm run gen:resources"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
     "path": "^0.12.7",
